# async_chat_GB

./: .gitignore  README.md  messenger.db  pyproject.toml
lesson1/: lesson1.py
lesson_01/Урок 1. Пример практического задания/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6_1.py  task_6_2.py  task_6_3.py  task_6_4.py  task_6_5.py  task_6_6.py
lesson_02/: lesson_2  loguru_logger.py  task_1.py  task_2.py  task_3.py
lesson_02/data/: file.yaml  main_data  orders.json
lesson_02/Урок 2. Пример практического задания/task_1/: main.py
lesson_02/Урок 2. Пример практического задания/task_2/: main_1.py  main_2.py
lesson_02/Урок 2. Пример практического задания/task_3/: main_1.py  main_2.py
lesson_03/: client_side.py  conf.py  server_side.py  utils.py  vars.py
lesson_08/Урок 8. Коды примеров/Два варианта созадния потоков/: thread_simple_1.py  thread_simple_class_2.py
lesson_08/Урок 8. Коды примеров/Потоки-не демоны и демоны/: thread_test_1.py  thread_test_2.py  thread_test_3.py
lesson_09/: ping.py  ping_range.py  ping_range_tab.py
messenger/: client.py  client_side.py  conf.py  config.py  launcher.py  server.py  server_side.py  utils.py
messenger/db/: models.py
messenger/protocol/: __init__.py  request.py  response.py
messenger/test/: test_client.py  test_new.py  test_server.py
messenger/utils/: __init__.py  log_handler.py  utils.py
tests/: test_cli.py  test_request.py  test_responce.py
