[tool.poetry]
name = "asicchat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chardet = "^5.1.0"
requests = "^2.28.2"
loguru = "^0.6.0"
pydantic = "^1.10.6"
sqlalchemy = "^2.0.9"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
yapf = "^0.32.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
